# VisionGrabber

./: .gitignore  .gitmodules  README.md  config.py  flask_app.py  klipperAPI.py  klipper_test.py  launch.py  requirements.txt  scan_and_grab.py  send_cmd.py  setup.txt
Button/: USB Button.step
Button/Firmware/: compile_commands.json  platformio.ini
Button/Firmware/src/: main.cpp
Host/: circle_detector_params.json  config.py  flask_app.py  home.py  launch.py  machineAPI.py  scan_and_grab.py  send_cmd.py  send_cmd_nowait.py  send_cmd_wait.py  test_overhead_camera
SKR_Mini_E3_Firmware/klipper/: flash.jlink
SKR_Mini_E3_Firmware/skr bootloder/: flash.jlink  flash_jlink.bat
SKR_Mini_E3_Firmware/voronMC/: .cproject  .mxproject  .project  STM32F103RCTX_FLASH.ld  voronMC Debug.launch  voronMC.ioc
SKR_Mini_E3_Firmware/voronMC/.metadata/: .log4j2.xml  version.ini
SKR_Mini_E3_Firmware/voronMC/Core/Inc/: CommandParser.h  Config.h  CoreXY.h  Machine.h  Servo.h  Stepper.h  (+5 more)
SKR_Mini_E3_Firmware/voronMC/Debug/: makefile  sources.mk
SKR_Mini_E3_Firmware/voronMC/tests/: CMakeLists.txt  debug  debug_clean  run  run_clean
SKR_Mini_E3_Firmware/voronMC/tests/mocks/: MockCoreXY.h  MockGPIO.h  MockSYS.h  MockServo.h  MockStepper.h  MockTMC2209.h  MockTMC2209Simple.h  MockTimer.h  MockUART.h
SKR_Mini_E3_Firmware/voronMC/tests/unit/: test_CommandParser.cpp  test_CoreXY.cpp  test_Machine.cpp  test_Servo.cpp  test_Stepper.cpp  test_TMC2209.cpp
Toolhead/: VisionGrabber Toolhead.step
linux_configs/: 99-button.rules  VisionGrabberLauncher.service  VisionGrabberWeb.service
(+42 files in other folders)
